// Copyright (C) 2019 Rodrigo Jose Hernandez Cordoba
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package AeonGames;

message RenderTargetBuffer {
    enum Type
    {
		RenderBuffer  =0;
		Texture       =1;
	}
    enum Attachment
    {
		Color         =0;
		Depth         =1;
		Stencil       =2;
		DepthStencil  =3;
	}
	enum Format
	{
		// I'll be adding more here should the need arise.
		// Both OpenGL and Vulkan support too many formats
		// and I don't have the time to both
		// write support and test them all.
		R8G8B8        =0;
		R8G8B8A8      =1;
		D24S8         =2;
	}
	Type type             = 1;
	Attachment attachment = 2;
	Format format         = 3;
}

message FrameBufferBuffer {
	repeated RenderTargetBuffer target = 1;
}
